[workspace]
members = []
exclude = ["examples/*"]

[package]
name = "wasmt"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Opt-in WebSocket networking (src/net). Gates the extra web-sys APIs so the
# default build is unchanged. No new crates: send uses send_with_array_buffer
# (ArrayBuffer/Uint8Array are js-sys); Sink/Stream/io come from `futures`.
net = [
  "web-sys/WebSocket",
  "web-sys/BinaryType", # set_binary_type(Arraybuffer)
  "web-sys/CloseEvent",
]
# Opt-in for the network-dependent WebSocket tests (tests/net.rs). They need a
# browser test runner AND a reachable echo server (override the default with
# the WS_ECHO_URL env var at build time). Kept off the default `net` so a plain
# `cargo test --features net` never blocks on the network.
net-tests = ["net"]

[dependencies]
console_error_panic_hook = "0.1"
crossbeam-deque = "0.8"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Worker",
  "WorkerGlobalScope",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "Navigator",
  "WorkerNavigator",
  "Performance",
  "ErrorEvent",
  "console",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
